# RakDotNet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RakDotNet.sln
Example/: Example.csproj  Program.cs  cert.p12  gencert.sh
Native/: BitStream.cpp  BitStream.h  Defines.h  Native.vcxproj  Native.vcxproj.filters  RakNetTypes.cpp  RakNetTypes.h  RakNetworkFactory.cpp  RakNetworkFactory.h  RakPeerInterface.cpp  RakPeerInterface.h  Replica.cpp  Replica.h  ReplicaManager.cpp  ReplicaManager.h
RakDotNet/: BitStream.cs  IRakConnection.cs  IRakNetServer.cs  IRakServer.cs  IReplica.cs  IReplicaManager.cs  ISerializable.cs  InternalPacket.cs  MessageIdentifiers.cs  Packet.cs  PacketPriority.cs  PacketReliability.cs  Program.cs  RakDotNet.csproj  RakNetServer.cs  RakNetworkFactory.cs  RakPeerInterface.cs  RangeList.cs  ReliabilityLayer.cs  Replica.cs  ReplicaManager.cs  Resend.cs  Serializable.cs  ServerProtocol.cs
RakDotNet.Example/: Program.cs  RakDotNet.Example.csproj
RakDotNet/Data/: BitStream.cs  IPlugin.cs  MessageIdentifier.cs  PacketReliability.cs  Serializable.cs
RakDotNet/Enums/: CloseReason.cs  MessageIdentifier.cs  Reliability.cs
RakDotNet/Extentions/: BitReaderExtensions.cs  BitWriterExtensions.cs
RakDotNet/IO/: BitReaderCompressed.cs  BitReader_Compressed.cs  BitWriterCompressed.cs  BitWriter_Compressed.cs
RakDotNet/RakNet/: InternalPacket.cs  RakNetServer.cs  RangeList.cs  ReliabilityLayer.cs  Resend.cs
RakDotNet/Server/: RakServer.cs  RangeList.cs  ReliabilityLayer.cs
RakDotNet/TcpUdp/: ConnectionEntry.cs  SendFailReason.cs  TcpExtensions.cs  TcpUdpConnection.cs  TcpUdpServer.cs
RakDotNet/Types/: Packet.cs  SocketDescriptor.cs  SystemAddress.cs
RakNet/: AsynchronousFileIO.cpp  AsynchronousFileIO.h  AutoRPC.cpp  AutoRPC.h  AutopatcherPatchContext.h  AutopatcherRepositoryInterface.h  BigTypes.h  BitStream.cpp  BitStream.h  BitStream_NoTemplate.cpp  BitStream_NoTemplate.h  CMakeLists.txt  CheckSum.cpp  CheckSum.h  ClientContextStruct.h  CommandParserInterface.cpp  CommandParserInterface.h  ConnectionGraph.cpp  ConnectionGraph.h  ConsoleServer.cpp  ConsoleServer.h  DS_BPlusTree.h  DS_BinarySearchTree.h  DS_BytePool.cpp  DS_BytePool.h  DS_ByteQueue.cpp  DS_ByteQueue.h  DS_Heap.h  DS_HuffmanEncodingTree.cpp  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeFactory.h  DS_HuffmanEncodingTreeNode.h  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_MemoryPool.h  DS_OrderedChannelHeap.h  DS_OrderedList.h  DS_Queue.h  DS_QueueLinkedList.h  (+138 more)
